--- a/index.html
+++ b/index.html
@@ -71,6 +71,45 @@
             </div>
         </div>
     </div>
+
+    <div>
+        <br>
+        <br>
+        <br>
+    </div>
+
+    <div class="divContact d-flex flex-wrap">
+
+
+
+        <div class="bannerContact ">
+            <img src="./images/contract.webp" class="imgContract">
+        </div>
+        <div class="contactForm ">
+            <form action="" method="post">
+                <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                        required>
+                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                </div>
+                <div class="mb-3">
+                    <label for="name" class="form-label">Name</label>
+                    <input type="text" class="form-control" id="name" required>
+                    <label for="lastname" class="form-label">Last Name</label>
+                    <input type="text" class="form-control" id="lastName" required>
+                </div>
+                <div class="mb-3">
+                    <label for="number" class="form-label">Number</label>
+                    <input type="number" class="form-control" id="phone">
+                </div>
+                <div class="mb-3 form-check">
+                    <input type="checkbox" class="form-check-input" id="exampleCheck1" required>
+                    <label class="form-check-label" for="exampleCheck1">Accept Terms and Conditions</label>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
     </div>
 
     <div class="container text-center">
