--- a/index.html
+++ b/index.html
@@ -4,155 +4,117 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link rel="stylesheet" type="text/css" href="index.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>Responsive Web</title>
+    <link rel="stylesheet" href="index.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body>
-    <!--  NAVBAR -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Web Page name</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
+    <!-- NAVBAR -->
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">Web Page Name</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Something Else</a></li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Something else</a>
+                        <button class="btn btn-outline-success">Contact Us</button>
                     </li>
                 </ul>
-                <form class="d-flex" role="search">
-                    <button class="btn btn-outline-success" type="submit">Contact Us!!!</button>
-                </form>
             </div>
         </div>
     </nav>
-    <!--  NAVBAR -->
-    <div class="divImage">
-        <img src="./images/albania.webp" class="imagen" alt="...">
-        <p class="imageParrafo">
-            Outsourcing that works! <br>
-            We find you amazing employees that cost 80% <br>
-            less than US equivalents.
-        </p>
-    </div>
-    <div class="container text-center">
-        <div class="titulo">
-            <strong>About Us</strong>
-        </div>
-        <div class="row align-items-center">
-            <div class="col">
-                <img src="./images/office.webp" class="imgOffice" alt="">
-            </div>
-            <div class="col">
-                <p class="parrafoImgOffice">
-                    <strong>We’re ready to help you</strong><br>
-                    CheaperTeam is an innovative outsourcing company with offices in 4 countries.
-                    We recruit and accommodate exceptionally skilled employees in our offices, ensuring they deliver
-                    productivity levels equivalent to those based in the US.
-                    Our objective is to provide motivated and high-quality employees while maintaining cost
-                    efficiency
-                    for
-                    your business.
-                    Our tailored style of doing business allows flexibility for our clients. We are able to vet and
-                    source
-                    employees for almost any industry.
 
+    <div class="container text-center my-4 image-container">
+        <img src="./images/albania.webp" class="img-fluid rounded" alt="Albania">
+        <div class="text-overlay"><strong>Outsourcing that works!</strong> <br>
+            We find you amazing employees that cost 80% less than US equivalents.</div>
+    </div>
+
+
+
+    <!-- Sección About Us -->
+    <div class="container text-center my-5">
+        <h2><strong>About Us</strong></h2>
+        <div class="row align-items-center">
+            <div class="col-md-6">
+                <img src="./images/office.webp" class="img-fluid rounded shadow" alt="Office">
+            </div>
+            <div class="col-md-6">
+                <p><strong>We’re ready to help you</strong></p>
+                <p>
+                    CheaperTeam is an innovative outsourcing company with offices in 4 countries. We recruit and
+                    accommodate exceptionally skilled employees in our offices, ensuring they deliver productivity
+                    levels equivalent to those based in the US.
                 </p>
             </div>
         </div>
     </div>
 
-    <div>
-        <br>
-        <br>
-        <br>
-    </div>
-
-    <div class="divContact d-flex flex-wrap">
-
-
-
-        <div class="bannerContact ">
-            <img src="./images/contract.webp" class="imgContract">
-        </div>
-        <div class="contactForm ">
-            <form action="" method="post">
-                <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                        required>
-                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-                </div>
-                <div class="mb-3">
-                    <label for="name" class="form-label">Name</label>
-                    <input type="text" class="form-control" id="name" required>
-                    <label for="lastname" class="form-label">Last Name</label>
-                    <input type="text" class="form-control" id="lastName" required>
-                </div>
-                <div class="mb-3">
-                    <label for="number" class="form-label">Number</label>
-                    <input type="number" class="form-control" id="phone">
-                </div>
-                <div class="mb-3 form-check">
-                    <input type="checkbox" class="form-check-input" id="exampleCheck1" required>
-                    <label class="form-check-label" for="exampleCheck1">Accept Terms and Conditions</label>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
+    <!-- Contact Form -->
+    <div class="container my-5">
+        <div class="row g-4">
+            <div class="col-md-6">
+                <img src="./images/contract.webp" class="img-fluid rounded" alt="Contract">
+            </div>
+            <div class="col-md-6">
+                <h3>Contact Us</h3>
+                <form>
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Email address</label>
+                        <input type="email" class="form-control" id="email" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="name" class="form-label">Name</label>
+                        <input type="text" class="form-control" id="name" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="phone" class="form-label">Phone Number</label>
+                        <input type="tel" class="form-control" id="phone">
+                    </div>
+                    <div class="mb-3 form-check">
+                        <input type="checkbox" class="form-check-input" id="terms" required>
+                        <label class="form-check-label" for="terms">Accept Terms and Conditions</label>
+                    </div>
+                    <button type="submit" class="btn btn-primary w-100">Submit</button>
+                </form>
+            </div>
         </div>
     </div>
 
-    <div class="container text-center">
-        <div class="titulo">
-            <strong>What can we offer you</strong>
-        </div>
-        <div>
-            <i style="font-size: 3rem; color: rgb(0, 6, 10);" class="bi bi-person-video3"></i>
-            <h1>Recruiting</h1>
-        </div>
-        <div>
-            <i style="font-size: 3rem; color: rgb(0, 6, 10);" class="bi bi-journal-check"></i>
-            <h1>Aplication Process</h1>
-        </div>
-    </div>
-
-    <div id="footer" class="row align-items-start">
-        <div class="col">
-            Privacy Policy
-        </div>
-        <div class="col">
-            <i class="bi bi-instagram"></i>
-            <i class="bi bi-linkedin"></i>
-            <i class="bi bi-facebook"></i>
+    <!-- Servicios -->
+    <div class="container text-center my-5">
+        <h2><strong>What can we offer you</strong></h2>
+        <div class="row">
+            <div class="col-md-6">
+                <i class="bi bi-person-video3 display-3 text-dark"></i>
+                <h4>Recruiting</h4>
+            </div>
+            <div class="col-md-6">
+                <i class="bi bi-journal-check display-3 text-dark"></i>
+                <h4>Application Process</h4>
+            </div>
         </div>
     </div>
 
+    <!-- Footer -->
+    <footer class="bg-dark text-white text-center py-3">
+        <div class="container d-flex justify-content-between">
+            <div>Privacy Policy</div>
+            <div>
+                <i class="bi bi-instagram mx-2"></i>
+                <i class="bi bi-linkedin mx-2"></i>
+                <i class="bi bi-facebook mx-2"></i>
+            </div>
+        </div>
+    </footer>
 
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
-<script>
-    document.addEventListener("scroll", function () {
-        let image = document.querySelector(".imgOffice");
-        if (window.scrollY > 100) {  // Cuando el usuario baje 100px
-            image.classList.add("shadow-effect");
-        } else {
-            image.classList.remove("shadow-effect");
-        }
-    });
-</script>
-
 
 </html>
