navbar sticky-top

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#">Web Page Name</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -20,8 +20,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Something Else</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#aboutUs">About Us</a></li>
                     <li class="nav-item">
                         <button class="btn btn-outline-success">Contact Us</button>
                     </li>
@@ -39,7 +39,7 @@
 
 
     <!-- Sección About Us -->
-    <div class="container text-center my-5">
+    <div id="aboutUs" class="container text-center my-5">
         <h2><strong>About Us</strong></h2>
         <div class="row align-items-center">
             <div class="col-md-6">
