Agregado de Privacy Policy

--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
     <!-- Footer -->
     <footer class="bg-dark text-white text-center py-3">
         <div class="container d-flex justify-content-between">
-            <div>Privacy Policy</div>
+            <div><a class="nav-link active" href="policy.html">Privacy Policy</a></li>
+            </div>
             <div>
                 <i class="bi bi-instagram mx-2"></i>
                 <i class="bi bi-linkedin mx-2"></i>
