--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <input type="tel" class="form-control" id="phone">
                     </div>
                     <div class=" mb-3">
-                        <label class="input-group-text" for="inputGroupFile01">Upload your CV</label>
+                        <label class="form-label" for="cv">Upload your CV</label>
                         <input type="file" class="form-control" id="uploadCv">
                     </div>
 
